--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,13 @@
 /vendor/
 /web/bundles/
 *.sublime-workspace
-database.sqlite
-QtClient/build-*-Debug/
-*.pro.user
-notes*.sqlite
+Makefile.Debug
+Makefile.Release
 Makefile
-Makefile.*
+QtClient/build-*
 TODO.md
-tests/generated
-QtClient/JoplinQtClient/make.bat
+*.pro.user
+QtClient/data/
+app/data/uploads/
+!app/data/uploads/.gitkeep
+sparse_test.php
