Fixed deployment process

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -7,8 +7,6 @@ parameters:
     database_name:     symfony
     database_user:     root
     database_password: ~
-    # You should uncomment this if you want use pdo_sqlite
-    # database_path: "%kernel.root_dir%/data.db3"
 
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
@@ -17,3 +15,8 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+    database:
+        database:  "%database_name%"
+        host:      "%database_host%"
+        username:  "%database_user%"
+        password:  "%database_password%"
