Started moving components to own file

--- a/ReactNativeClient/package.json
+++ b/ReactNativeClient/package.json
@@ -18,7 +18,7 @@
 		"redux": "3.6.0",
 		"react-redux": "4.4.8",
 		"query-string": "4.3.4",
-		"react-native-sqlite-storage": "3.3.*"
+		"react-native-sqlite-storage": "3.3.*",
 	},
 	"jest": {
 		"preset": "react-native"
