--- a/ReactNativeClient/package.json
+++ b/ReactNativeClient/package.json
@@ -1,26 +1,27 @@
 {
-	"name": "AwesomeProject",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"react": "16.0.0-alpha.6",
-		"react-native": "0.44.0"
-	},
-	"devDependencies": {
-		"babel-jest": "19.0.0",
-		"babel-preset-react-native": "1.9.1",
-		"jest": "19.0.2",
-		"react-test-renderer": "16.0.0-alpha.6",
-		"redux": "3.6.0",
-		"react-redux": "4.4.8",
-		"query-string": "4.3.4",
-		"react-native-sqlite-storage": "3.3.*",
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "AwesomeProject",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "react": "16.0.0-alpha.6",
+    "react-native": "0.44.0",
+    "react-navigation": "^1.0.0-beta.9"
+  },
+  "devDependencies": {
+    "babel-jest": "19.0.0",
+    "babel-preset-react-native": "1.9.1",
+    "jest": "19.0.2",
+    "react-test-renderer": "16.0.0-alpha.6",
+    "redux": "3.6.0",
+    "react-redux": "4.4.8",
+    "query-string": "4.3.4",
+    "react-native-sqlite-storage": "3.3.*"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
