--- a/ReactNativeClient/package.json
+++ b/ReactNativeClient/package.json
@@ -10,6 +10,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-checkbox": "^1.1.0",
+    "react-native-popup-menu": "^0.7.4",
     "react-native-vector-icons": "^2.0.3",
     "react-navigation": "^1.0.0-beta.9",
     "uuid": "^3.0.1"
