--- a/ReactNativeClient/android/settings.gradle
+++ b/ReactNativeClient/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'AwesomeProject'
+include ':react-native-fs'
+project(':react-native-fs').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fs/android')
 
 include ':app'
 
