--- a/CliClient/package.json
+++ b/CliClient/package.json
@@ -9,6 +9,7 @@
     "jssha": "^2.3.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "node-fetch": "^1.7.1",
     "promise": "^7.1.1",
     "react": "16.0.0-alpha.6",
