--- a/CliClient/package.json
+++ b/CliClient/package.json
@@ -22,6 +22,7 @@
     "sprintf-js": "^1.1.1",
     "sqlite3": "^3.1.8",
     "string-to-stream": "^1.1.0",
+    "tcp-port-used": "^0.1.2",
     "uuid": "^3.0.1",
     "vorpal": "^1.12.0"
   },
