--- a/CliClient/package.json
+++ b/CliClient/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "CliClient",
-  "version": "0.0.1",
-  "private": true,
+  "name": "joplin-cli",
+  "version": "0.8.0",
+  "bin": {
+    "joplin": "./main.sh"
+  },
   "dependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "source-map-support": "^0.4.15",
     "app-module-path": "^2.2.0",
     "form-data": "^2.1.4",
     "fs-extra": "^3.0.1",
@@ -27,12 +31,10 @@
     "babel-cli": "^6.24.1",
     "babel-plugin-syntax-async-functions": "^6.1.4",
     "babel-plugin-transform-regenerator": "^6.1.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.1.4",
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.1.4",
     "babel-preset-react": "^6.24.1",
-    "source-map-support": "^0.4.15",
     "jasmine": "^2.6.0"
   },
   "scripts": {
