--- a/CliClient/package.json
+++ b/CliClient/package.json
@@ -1,16 +1,23 @@
 {
   "name": "joplin-cli",
+  "description": "CLI client for Joplin",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/laurent22/joplin"
+  },
+  "url": "git://github.com/laurent22/joplin.git",
   "version": "0.8.14",
   "bin": {
     "joplin": "./main.sh"
   },
   "dependencies": {
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "source-map-support": "^0.4.15",
     "app-module-path": "^2.2.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "form-data": "^2.1.4",
     "fs-extra": "^3.0.1",
     "jssha": "^2.3.0",
+    "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
@@ -19,6 +26,7 @@
     "query-string": "4.3.4",
     "sax": "^1.2.2",
     "server-destroy": "^1.0.1",
+    "source-map-support": "^0.4.15",
     "sprintf-js": "^1.1.1",
     "sqlite3": "^3.1.8",
     "string-to-stream": "^1.1.0",
