--- a/CliClient/.gitignore
+++ b/CliClient/.gitignore
@@ -5,6 +5,6 @@ tests-build/
 tests/src
 config.json
 app/lib
-tests/client1
-tests/client2
-tests/sync
+tests/fuzzing/client1
+tests/fuzzing/client2
+tests/fuzzing/sync
