--- a/ReactNativeClient/android/app/build.gradle
+++ b/ReactNativeClient/android/app/build.gradle
@@ -83,62 +83,73 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+	compileSdkVersion 23
+	buildToolsVersion "23.0.1"
 
-    defaultConfig {
-        applicationId "com.awesomeproject"
-        minSdkVersion 16
-        targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
-        ndk {
-            abiFilters "armeabi-v7a", "x86"
-        }
-    }
-    splits {
-        abi {
-            reset()
-            enable enableSeparateBuildPerCPUArchitecture
-            universalApk false  // If true, also generate a universal APK
-            include "armeabi-v7a", "x86"
-        }
-    }
-    buildTypes {
-        release {
-            minifyEnabled enableProguardInReleaseBuilds
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-        }
-    }
-    // applicationVariants are e.g. debug, release
-    applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            // For each separate APK per architecture, set a unique version code as described here:
-            // http://tools.android.com/tech-docs/new-build-system/user-guide/apk-splits
-            def versionCodes = ["armeabi-v7a":1, "x86":2]
-            def abi = output.getFilter(OutputFile.ABI)
-            if (abi != null) {  // null for the universal-debug, universal-release variants
-                output.versionCodeOverride =
-                        versionCodes.get(abi) * 1048576 + defaultConfig.versionCode
-            }
-        }
-    }
+	defaultConfig {
+		applicationId "com.awesomeproject"
+		minSdkVersion 16
+		targetSdkVersion 22
+		versionCode 1
+		versionName "1.0"
+		ndk {
+			abiFilters "armeabi-v7a", "x86"
+		}
+	}
+	splits {
+		abi {
+			reset()
+			enable enableSeparateBuildPerCPUArchitecture
+			universalApk false  // If true, also generate a universal APK
+			include "armeabi-v7a", "x86"
+		}
+	}
+	signingConfigs {
+		release {
+			if (project.hasProperty('JOPLIN_RELEASE_STORE_FILE')) {
+				storeFile file(JOPLIN_RELEASE_STORE_FILE)
+				storePassword JOPLIN_RELEASE_STORE_PASSWORD
+				keyAlias JOPLIN_RELEASE_KEY_ALIAS
+				keyPassword JOPLIN_RELEASE_KEY_PASSWORD
+			}
+		}
+	}
+	buildTypes {
+		release {
+			minifyEnabled enableProguardInReleaseBuilds
+			proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+			signingConfig signingConfigs.release
+		}
+	}
+	// applicationVariants are e.g. debug, release
+	applicationVariants.all { variant ->
+		variant.outputs.each { output ->
+			// For each separate APK per architecture, set a unique version code as described here:
+			// http://tools.android.com/tech-docs/new-build-system/user-guide/apk-splits
+			def versionCodes = ["armeabi-v7a":1, "x86":2]
+			def abi = output.getFilter(OutputFile.ABI)
+			if (abi != null) {  // null for the universal-debug, universal-release variants
+				output.versionCodeOverride =
+						versionCodes.get(abi) * 1048576 + defaultConfig.versionCode
+			}
+		}
+	}
 }
 
 dependencies {
-    compile project(':react-native-fs')
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
-    compile project(':react-native-sqlite-storage')
-    compile project(':react-native-fetch-blob')
+	compile project(':react-native-fs')
+	compile fileTree(dir: "libs", include: ["*.jar"])
+	compile "com.android.support:appcompat-v7:23.0.1"
+	compile "com.facebook.react:react-native:+"  // From node_modules
+	compile project(':react-native-sqlite-storage')
+	compile project(':react-native-fetch-blob')
 }
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
 task copyDownloadableDepsToLibs(type: Copy) {
-    from configurations.compile
-    into 'libs'
+	from configurations.compile
+	into 'libs'
 }
 
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
