--- a/ReactNativeClient/package.json
+++ b/ReactNativeClient/package.json
@@ -10,10 +10,11 @@
     "dropbox": "^2.5.4",
     "form-data": "^2.1.4",
     "moment": "^2.18.1",
-    "react": "16.0.0-alpha.6",
-    "react-native": "0.44.0",
+    "react": "16.0.0-alpha.12",
+    "react-native": "0.46.0",
     "react-native-action-button": "^2.6.9",
     "react-native-checkbox": "^1.1.0",
+    "react-native-fetch-blob": "^0.10.6",
     "react-native-fs": "^2.3.3",
     "react-native-popup-menu": "^0.7.4",
     "react-native-side-menu": "^0.20.1",
