--- a/ReactNativeClient/package.json
+++ b/ReactNativeClient/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "AwesomeProject",
-  "version": "0.0.1",
+  "name": "Joplin",
+  "description": "Joplin for Android",
+  "license": "MIT",
+  "version": "0.8.0",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "dependencies": {
-    "dropbox": "^2.5.4",
     "form-data": "^2.1.4",
     "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.0",
     "react-native-action-button": "^2.6.9",
-    "react-native-checkbox": "^1.1.0",
     "react-native-fetch-blob": "^0.10.6",
     "react-native-fs": "^2.3.3",
     "react-native-popup-menu": "^0.7.4",
     "react-native-side-menu": "^0.20.1",
     "react-native-vector-icons": "^2.0.3",
     "react-navigation": "^1.0.0-beta.9",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "redux": "3.6.0",
+    "react-redux": "4.4.8",
+    "query-string": "4.3.4",
+    "react-native-sqlite-storage": "3.3.*"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
     "babel-preset-react-native": "1.9.1",
     "jest": "19.0.2",
-    "react-test-renderer": "16.0.0-alpha.6",
-    "redux": "3.6.0",
-    "react-redux": "4.4.8",
-    "query-string": "4.3.4",
-    "react-native-sqlite-storage": "3.3.*"
+    "react-test-renderer": "16.0.0-alpha.6"
   },
   "jest": {
     "preset": "react-native"
