--- a/CliClient/package.json
+++ b/CliClient/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "joplin-cli",
+  "name": "joplin",
   "description": "CLI client for Joplin",
   "license": "MIT",
   "repository": {
@@ -7,7 +7,7 @@
     "url": "https://github.com/laurent22/joplin"
   },
   "url": "git://github.com/laurent22/joplin.git",
-  "version": "0.8.36",
+  "version": "0.8.40",
   "bin": {
     "joplin": "./main_launcher.js"
   },
@@ -18,6 +18,7 @@
     "form-data": "^2.1.4",
     "fs-extra": "^3.0.1",
     "jssha": "^2.3.0",
+    "levenshtein": "^1.0.5",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
@@ -30,6 +31,7 @@
     "source-map-support": "^0.4.15",
     "sprintf-js": "^1.1.1",
     "sqlite3": "^3.1.8",
+    "string-padding": "^1.0.2",
     "string-to-stream": "^1.1.0",
     "tcp-port-used": "^0.1.2",
     "uuid": "^3.0.1",
