--- a/ReactNativeClient/android/app/build.gradle
+++ b/ReactNativeClient/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-image-resizer')
 	compile project(':react-native-fs')
 	compile fileTree(dir: "libs", include: ["*.jar"])
 	compile "com.android.support:appcompat-v7:23.0.1"
@@ -144,6 +145,7 @@ dependencies {
 	compile project(':react-native-sqlite-storage')
 	compile project(':react-native-fetch-blob')
 	compile project(':react-native-document-picker')
+	compile project(':react-native-image-resizer')
 }
 
 // Run this once to be able to run the application with BUCK
