--- a/CliClient/package.json
+++ b/CliClient/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "app-module-path": "^2.2.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "cache-require-paths": "^0.3.0",
     "follow-redirects": "^1.2.4",
     "form-data": "^2.1.4",
     "fs-extra": "^3.0.1",
@@ -23,6 +24,7 @@
     "md5": "^2.2.1",
     "moment": "^2.18.1",
     "node-fetch": "^1.7.1",
+    "node-persist": "^2.1.0",
     "os-tmpdir": "^1.0.2",
     "promise": "^7.1.1",
     "proper-lockfile": "^2.0.1",
