--- a/CliClient/package.json
+++ b/CliClient/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/laurent22/joplin"
   },
   "url": "git://github.com/laurent22/joplin.git",
-  "version": "0.9.2",
+  "version": "0.9.5",
   "bin": {
     "joplin": "./main.js"
   },
@@ -38,7 +38,8 @@
     "string-to-stream": "^1.1.0",
     "tcp-port-used": "^0.1.2",
     "uuid": "^3.0.1",
-    "yargs-parser": "^7.0.0"
+    "yargs-parser": "^7.0.0",
+    "word-wrap": "^1.2.3"
   },
   "devDependencies": {
     "babel-changed": "^7.0.0",
@@ -50,8 +51,7 @@
     "babel-preset-es2015": "^6.1.4",
     "babel-preset-react": "^6.24.1",
     "gettext-parser": "^1.2.2",
-    "jasmine": "^2.6.0",
-    "word-wrap": "^1.2.3"
+    "jasmine": "^2.6.0"
   },
   "scripts": {
     "babelbuild": "babel app -d build",
