--- a/ReactNativeClient/package.json
+++ b/ReactNativeClient/package.json
@@ -16,11 +16,13 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.0",
     "react-native-action-button": "^2.6.9",
+    "react-native-datepicker": "^1.6.0",
     "react-native-dialogbox": "^0.6.6",
     "react-native-document-picker": "^2.0.0",
     "react-native-fetch-blob": "^0.10.6",
     "react-native-fs": "^2.3.3",
     "react-native-image-resizer": "^0.1.1",
+    "react-native-popup-dialog": "^0.9.35",
     "react-native-popup-menu": "^0.7.4",
     "react-native-side-menu": "^0.20.1",
     "react-native-sqlite-storage": "3.3.*",
