--- a/CliClient/package.json
+++ b/CliClient/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/laurent22/joplin"
   },
   "url": "git://github.com/laurent22/joplin.git",
-  "version": "0.10.38",
+  "version": "0.10.42",
   "bin": {
     "joplin": "./main.js"
   },
@@ -22,6 +22,7 @@
     "levenshtein": "^1.0.5",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
+    "mime": "^2.0.3",
     "moment": "^2.18.1",
     "node-fetch": "^1.7.1",
     "node-persist": "^2.1.0",
@@ -32,6 +33,7 @@
     "redux": "^3.7.2",
     "sax": "^1.2.2",
     "server-destroy": "^1.0.1",
+    "sharp": "^0.18.4",
     "source-map-support": "^0.4.15",
     "sprintf-js": "^1.1.1",
     "sqlite3": "^3.1.8",
