--- a/CliClient/package.json
+++ b/CliClient/package.json
@@ -53,6 +53,7 @@
     "sqlite3": "^3.1.8",
     "string-padding": "^1.0.2",
     "string-to-stream": "^1.1.0",
+    "strip-ansi": "^4.0.0",
     "tcp-port-used": "^0.1.2",
     "tkwidgets": "^0.5.3",
     "uuid": "^3.0.1",
