--- a/ReactNativeClient/package.json
+++ b/ReactNativeClient/package.json
@@ -12,21 +12,22 @@
     "form-data": "^2.1.4",
     "html-entities": "^1.2.1",
     "moment": "^2.18.1",
+    "prop-types": "^15.6.0",
     "query-string": "4.3.4",
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.46.0",
+    "react": "16.0.0-beta.5",
+    "react-native": "0.49.0",
     "react-native-action-button": "^2.6.9",
     "react-native-datepicker": "^1.6.0",
     "react-native-dialogbox": "^0.6.6",
-    "react-native-document-picker": "^2.0.0",
+    "react-native-document-picker": "^2.1.0",
     "react-native-fetch-blob": "^0.10.6",
-    "react-native-fs": "^2.3.3",
-    "react-native-image-resizer": "^0.1.1",
+    "react-native-fs": "^2.8.1",
+    "react-native-image-resizer": "^1.0.0",
     "react-native-popup-dialog": "^0.9.35",
-    "react-native-popup-menu": "^0.7.4",
-    "react-native-side-menu": "^0.20.1",
+    "react-native-popup-menu": "^0.8.3",
+    "react-native-side-menu": "^1.1.3",
     "react-native-sqlite-storage": "3.3.*",
-    "react-native-vector-icons": "^2.0.3",
+    "react-native-vector-icons": "^4.4.2",
     "react-redux": "4.4.8",
     "redux": "3.6.0",
     "uuid": "^3.0.1"
