Improve sync conflict handling when the changes between local and remote don't matter

--- a/CliClientDemo/package.json
+++ b/CliClientDemo/package.json
@@ -16,7 +16,7 @@
     "node": ">=8.7.0"
   },
   "copyright": {
-    "title": "Joplin CLI",
+    "title": "Demo for Joplin CLI",
     "years": [
       2016,
       2017
