--- a/CliClient/package.json
+++ b/CliClient/package.json
@@ -27,8 +27,6 @@
   },
   "dependencies": {
     "app-module-path": "^2.2.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "cache-require-paths": "^0.3.0",
     "follow-redirects": "^1.2.4",
     "form-data": "^2.1.4",
     "fs-extra": "^3.0.1",
@@ -48,7 +46,6 @@
     "sax": "^1.2.2",
     "server-destroy": "^1.0.1",
     "sharp": "^0.18.4",
-    "source-map-support": "^0.4.15",
     "sprintf-js": "^1.1.1",
     "sqlite3": "^3.1.8",
     "string-padding": "^1.0.2",
@@ -61,21 +58,10 @@
     "yargs-parser": "^7.0.0"
   },
   "devDependencies": {
-    "babel-changed": "^7.0.0",
-    "babel-cli": "^6.24.1",
-    "babel-plugin-syntax-async-functions": "^6.1.4",
-    "babel-plugin-transform-regenerator": "^6.1.4",
-    "babel-polyfill": "^6.1.4",
-    "babel-preset-env": "^1.5.1",
-    "babel-preset-es2015": "^6.1.4",
-    "babel-preset-react": "^6.24.1",
     "gettext-parser": "^1.2.2",
     "jasmine": "^2.6.0"
   },
   "scripts": {
-    "babelbuild": "babel app -d build",
-    "build": "babel-changed app -d build --source-maps && babel-changed app/lib/models -d build/lib/models --source-maps && babel-changed app/lib/services -d build/lib/services --source-maps",
-    "clean": "babel-changed --reset",
-    "test": "babel-changed tests -d tests-build --source-maps && jasmine"
+    "test": "jasmine"
   }
 }
