--- a/ElectronClient/app/package.json
+++ b/ElectronClient/app/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.19.1",
     "promise": "^8.0.1",
     "query-string": "^5.0.1",
+    "redux": "^3.7.2",
     "sprintf-js": "^1.1.1",
     "sqlite3": "^3.1.13"
   }
