--- a/CliClient/package.json
+++ b/CliClient/package.json
@@ -30,6 +30,7 @@
     "follow-redirects": "^1.2.4",
     "form-data": "^2.1.4",
     "fs-extra": "^3.0.1",
+    "html-entities": "^1.2.1",
     "jssha": "^2.3.0",
     "levenshtein": "^1.0.5",
     "lodash": "^4.17.4",
