--- a/ElectronClient/app/package.json
+++ b/ElectronClient/app/package.json
@@ -29,6 +29,7 @@
     "fs-extra": "^4.0.2",
     "html-entities": "^1.2.1",
     "lodash": "^4.17.4",
+    "markdown-it": "^8.4.0",
     "marked": "^0.3.6",
     "moment": "^2.19.1",
     "node-fetch": "^1.7.3",
