--- a/ElectronClient/app/package.json
+++ b/ElectronClient/app/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "app-module-path": "^2.2.0",
+    "electron-context-menu": "^0.9.1",
     "fs-extra": "^4.0.2",
     "html-entities": "^1.2.1",
     "lodash": "^4.17.4",
