--- a/ElectronClient/app/package.json
+++ b/ElectronClient/app/package.json
@@ -28,6 +28,7 @@
     "app-module-path": "^2.2.0",
     "electron-context-menu": "^0.9.1",
     "fs-extra": "^4.0.2",
+    "highlight.js": "^9.12.0",
     "html-entities": "^1.2.1",
     "lodash": "^4.17.4",
     "markdown-it": "^8.4.0",
@@ -38,6 +39,7 @@
     "promise": "^8.0.1",
     "query-string": "^5.0.1",
     "react": "^16.0.0",
+    "react-ace": "^5.5.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
