--- a/ElectronClient/app/package.json
+++ b/ElectronClient/app/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "app-module-path": "^2.2.0",
     "electron-context-menu": "^0.9.1",
+    "follow-redirects": "^1.2.5",
     "fs-extra": "^4.0.2",
     "highlight.js": "^9.12.0",
     "html-entities": "^1.2.1",
@@ -34,6 +35,7 @@
     "markdown-it": "^8.4.0",
     "marked": "^0.3.6",
     "md5": "^2.2.1",
+    "mime": "^2.0.3",
     "moment": "^2.19.1",
     "node-fetch": "^1.7.3",
     "promise": "^8.0.1",
@@ -43,6 +45,7 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "sharp": "^0.18.4",
     "sprintf-js": "^1.1.1",
     "sqlite3": "^3.1.13",
     "tcp-port-used": "^0.1.2"
