--- a/ElectronClient/app/package.json
+++ b/ElectronClient/app/package.json
@@ -31,6 +31,8 @@
     "fs-extra": "^4.0.2",
     "highlight.js": "^9.12.0",
     "html-entities": "^1.2.1",
+    "jssha": "^2.3.1",
+    "levenshtein": "^1.0.5",
     "lodash": "^4.17.4",
     "markdown-it": "^8.4.0",
     "marked": "^0.3.6",
@@ -48,6 +50,8 @@
     "sharp": "^0.18.4",
     "sprintf-js": "^1.1.1",
     "sqlite3": "^3.1.13",
+    "string-padding": "^1.0.2",
+    "string-to-stream": "^1.1.0",
     "tcp-port-used": "^0.1.2"
   }
 }
