--- a/ElectronClient/app/package.json
+++ b/ElectronClient/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "joplin-desktop",
+  "name": "Joplin",
   "version": "0.10.0",
   "description": "Joplin for Desktop",
   "main": "main.js",
@@ -18,9 +18,12 @@
   "bugs": {
     "url": "https://github.com/laurent22/joplin/issues"
   },
- "build": {
-   "appId": "net.cozic.joplin-desktop"
- },
+  "build": {
+    "appId": "net.cozic.joplin-desktop",
+    "win": {
+      "icon": "../../Assets/Joplin.ico"
+    }
+  },
   "homepage": "https://github.com/laurent22/joplin#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -33,6 +36,7 @@
     "app-module-path": "^2.2.0",
     "electron-context-menu": "^0.9.1",
     "follow-redirects": "^1.2.5",
+    "form-data": "^2.3.1",
     "fs-extra": "^4.0.2",
     "highlight.js": "^9.12.0",
     "html-entities": "^1.2.1",
@@ -57,6 +61,7 @@
     "sqlite3": "^3.1.13",
     "string-padding": "^1.0.2",
     "string-to-stream": "^1.1.0",
-    "tcp-port-used": "^0.1.2"
+    "tcp-port-used": "^0.1.2",
+    "uuid": "^3.1.0"
   }
 }
